--- a/styleindex.css
+++ b/styleindex.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('IMAGENES/apretonpruebas.jpg');
+    background-image: url('IMAGENES/apretons.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
