--- a/stylecontacto.css
+++ b/stylecontacto.css
@@ -1,43 +1,25 @@
 /* Contenedor columnas */
 .container {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 40px;
 }
 
 .column {
-    width: 45%;
-    text-align: center;
-    align-items: center;
-    border-radius: 20px;
+    width: 48%; /* Para que quepan lado a lado */
 }
 
-.map-image {
-    width: 100%;
-    max-width: 400px;
-    border-radius: 20px;
-}
-
-/* Contenedor contacto */
-.contact-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-    padding: 20px;
-}
-
+/* Mapa responsive */
 .map-responsive {
     position: relative;
-    padding-bottom: 56.25%; /* Relación 16:9 */
+    padding-bottom: 56.25%;
     height: 0;
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);
-    margin-bottom: 20px;
 }
 
 .map-responsive iframe {
@@ -49,6 +31,29 @@
     border: 0;
 }
 
+
+/* Contenedor contacto */
+.contact-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+/* Imagen de horario */
+.horario-img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+
+/* Dirección debajo del mapa */
+.direccion {
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #333;
+}
 
 .contact-item {
     background-color: rgba(255, 255, 255, 0.863);
@@ -160,16 +165,15 @@
 }
 
 /* Media queries para pantallas pequeñas */
+
 @media (max-width: 768px) {
-    .column {
+     .column {
         width: 100%;
-        margin-bottom: 30px;
     }
 
-    .contact-container {
+    .container {
         flex-direction: column;
-        padding: 10px;
-        gap: 20px;
+        align-items: center;
     }
 
     .contact-item {
