--- a/stylecontacto.css
+++ b/stylecontacto.css
@@ -1,25 +1,43 @@
 /* Contenedor columnas */
 .container {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: space-around;
+    align-items: center;
     flex-wrap: wrap;
     gap: 20px;
     margin-bottom: 40px;
 }
 
 .column {
-    width: 48%; /* Para que quepan lado a lado */
+    width: 45%;
+    text-align: center;
+    align-items: center;
+    border-radius: 20px;
 }
 
-/* Mapa responsive */
+.map-image {
+    width: 100%;
+    max-width: 400px;
+    border-radius: 20px;
+}
+
+/* Contenedor contacto */
+.contact-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+}
+
 .map-responsive {
     position: relative;
-    padding-bottom: 56.25%;
+    padding-bottom: 56.25%; /* Relación 16:9 */
     height: 0;
     overflow: hidden;
     border-radius: 10px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+    margin-bottom: 20px;
 }
 
 .map-responsive iframe {
@@ -31,29 +49,6 @@
     border: 0;
 }
 
-
-/* Contenedor contacto */
-.contact-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 20px;
-    padding: 20px;
-}
-/* Imagen de horario */
-.horario-img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-}
-
-/* Dirección debajo del mapa */
-.direccion {
-    margin-top: 10px;
-    font-size: 1rem;
-    color: #333;
-}
 
 .contact-item {
     background-color: rgba(255, 255, 255, 0.863);
@@ -165,15 +160,16 @@
 }
 
 /* Media queries para pantallas pequeñas */
-
 @media (max-width: 768px) {
-     .column {
+    .column {
         width: 100%;
+        margin-bottom: 30px;
     }
 
-    .container {
+    .contact-container {
         flex-direction: column;
-        align-items: center;
+        padding: 10px;
+        gap: 20px;
     }
 
     .contact-item {
