--- a/styleinmobiliaria.css
+++ b/styleinmobiliaria.css
@@ -1,8 +1,7 @@
-.img-wrap {
-  text-align: center;  /* centra la imagen horizontalmente */
-  margin: 80px auto 0;   /* separa 80px del encabezado */
-  margin-top: 60px; /* separa 60px del encabezado */
-  max-width: 180px;      /* controla el ancho máximo del logo */
-  width: 70%;
-  height: 40%;
+.contenedor {
+  text-align: center; /* Centra horizontalmente */
+  margin-top: 20px; /* Espacio superior */
+  margin-bottom: 20px; /* Espacio inferior */
+  padding: 10px; /* Espaciado interno */
+  height: 50%;
 }
