--- a/styleservicios.css
+++ b/styleservicios.css
@@ -5,7 +5,7 @@
 
 #introduccion h2 {
   font-size: 36px;
-  color: rgba(106, 153, 133, 0.9);
+  color: rgba(114, 114, 114);
   margin-bottom: 30px;
 }
 
@@ -57,7 +57,7 @@
 .caja h3 {
   margin-top: 0;
   font-size: 26px;
-  color: rgba(106, 153, 133, 0.9);
+  color: rgba(114, 114, 114);
   margin-bottom: 16px;
 }
 
@@ -106,7 +106,7 @@
 .caja.centrado h2 {
   font-size: 30px;
   margin-bottom: 15px;
-  color: rgba(106, 153, 133, 0.9);
+  color: rgba(114, 114, 114);
 }
 
 .caja.centrado p {
